--- a/en/Glossary.html
+++ b/en/Glossary.html
@@ -53,28 +53,28 @@
         </div>
       </main>
       <footer>
-        <a href="page1.html"><img src="/public/img/Logo.webp" alt="Retour accueuil"></a>
-        <p>MENU</p>
-      <ul>
-        <li><a href="page1en.html">The Magical Saga That Enchanted the World</a></li>
-          <li><a href="page2en.html">The Magical Beginning of an Epic Saga</a></li>
-          <li><a href="page3en.html">The Epic Conclusion of a Magical Saga</a></li>
-          <li><a href="page4en.html">The Enchanting Melody of the Harry Potter Saga</a></li>
-          <li><a href="page5en.html">The Wizards Behind the Screen</a></li>
-      </ul>
-      <ul>
-        <li><a href="apropos.html"></a>About us</li>
-        <li><a href="glossaire.html"></a>Glossary</li>
-        <li><a href="autreprojet"></a>Others Projects</li>
-      </ul>
-
-      <p class="suivre">Follow us</p>
-      <div class="social-icons">
-        <img class="img" src="public/img/facebook.webp" />
-        <img class="img" src="public/img/instagram.webp" />
-        <img class="img" src="public/img/twitter.webp" />
-        <img class="img" src="public/img/youtube.webp" />
-      </div>
-    </footer>
-</body>
-</html>
+        <a href="page1en.html"><img class="logofooter" src="/public/img/logo.webp.jpeg" alt="Retour accueuil"></a>
+        <p class="menu">MENU</p>
+        <ul class="articleli">
+            <li><a href="page2en.html">The Magical Saga That Enchanted the World</a></li>
+            <li><a href="page3en.html">The Beginning of a Magical Adventure</a></li>
+            <li><a href="page4en.html">The Epic Conclusion of a Magical Saga</a></li>
+            <li><a href="page5en.html">The Enchanting Melody of the Harry Potter Saga</a></li>
+            <li><a href="page6en.html">The Wizards Behind the Screen</a></li>
+        </ul>
+        <ul class="utils">
+          <li><a href="aboutus.html">A Propos</a></li>
+          <li><a href="Glossary.html">Glossaire</a></li>
+          <li><a href="otherpro.html">Autres projets</a></li>
+        </ul>
+  
+        <p class="suivre">NOUS SUIVRE</p>
+        <div class="social-icons">
+          <img class="img" src="public/img/facebook.webp" />
+          <img class="img" src="public/img/instagram.webp" />
+          <img class="img" src="public/img/twitter.webp" />
+          <img class="img" src="public/img/youtube.webp" />
+        </div>
+      </footer>
+  </body>
+  </html>
