--- a/en/page5en.html
+++ b/en/page5en.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARTICLE 2</title>
-</head>
+<html lang="fr" x-data="{
+  menuIsOpen: false,
+ }" 
+ :class="{noscroll:menuIsOpen,}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/css/style5.css" />
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+    <title>article 4</title>
+  </head>
 <body>
     <header>
-        <a href="page1en.html"><img src="/public/img/logo.webp"></a>
-        <p>ABOUT US</p><p>GLOSSARY</p>
-      </header>
-    <main>
-        <div>
-            <img src="/public/img/Head.webp" alt="accueuil">
-            <p>FR / ENG</p>
+        <a href="page1en.html"><img src="/public/img/logo.webp.jpeg"></a>
+        <p class="apropos"><a href="aboutus.html">About us</a></p><p class="glossaire"><a href="Glossary.html">GLOSSARY</a></p>
+    
+        <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
+          <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
+          </a>
+          <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
+            <div class="close-icon" @click="menuIsOpen = false">
+              <img src="/public/img/menu-closed.webp" alt="Fermer le menu" /></div>
+              <ul>
+                <li><a href="page2en.html">The Magical Saga That Enchanted the World</a></li>
+                <li><a href="page3en.html">The Beginning of a Magical Adventure</a></li>
+                <li><a href="page4en.html">The Epic Conclusion of a Magical Saga</a></li>
+                <li><a href="page5en.html">The Enchanting Melody of the Harry Potter Saga</a></li>
+                <li><a href="page6en.html">The Wizards Behind the Screen</a></li>
+              </ul>
+          </nav>
+        </header>
+      <main>
+        <section class="landing">
+          <img class="head" src="/public/img/Head.webp" alt="accueuil">
+          <div class="headtxt">
+            <p><a href="/fr/page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
             <h1>Dobby is Free</h1>
-        </div>
+          </div>
         <section>
             <h1>Hedwig's Theme: The Enchanting Melody of the Harry Potter Saga</h1>
             <p>Explore the musical soul of the Harry Potter universe through a timeless melody. Discover how each note of "Hedwig's Theme" instantly transports you to a world of magic, adventure, and emotion, reminding you that magic is real.</p>
@@ -115,28 +138,28 @@
         </section>
     </main>
     <footer>
-        <a href="page1.html"><img src="/public/img/Logo.webp" alt="Retour accueuil"></a>
-        <p>MENU</p>
-      <ul>
-        <li><a href="page1en.html">The Magical Saga That Enchanted the World</a></li>
-          <li><a href="page2en.html">The Magical Beginning of an Epic Saga</a></li>
-          <li><a href="page3en.html">The Epic Conclusion of a Magical Saga</a></li>
-          <li><a href="page4en.html">The Enchanting Melody of the Harry Potter Saga</a></li>
-          <li><a href="page5en.html">The Wizards Behind the Screen</a></li>
-      </ul>
-      <ul>
-        <li><a href="apropos.html"></a>About us</li>
-        <li><a href="glossaire.html"></a>Glossary</li>
-        <li><a href="autreprojet"></a>Others Projects</li>
-      </ul>
-
-      <p class="suivre">Follow us</p>
-      <div class="social-icons">
-        <img class="img" src="public/img/facebook.webp" />
-        <img class="img" src="public/img/instagram.webp" />
-        <img class="img" src="public/img/twitter.webp" />
-        <img class="img" src="public/img/youtube.webp" />
-      </div>
-    </footer>
-</body>
-</html>
+        <a href="page1en.html"><img class="logofooter" src="/public/img/logo.webp.jpeg" alt="Retour accueuil"></a>
+        <p class="menu">MENU</p>
+        <ul class="articleli">
+            <li><a href="page2en.html">The Magical Saga That Enchanted the World</a></li>
+            <li><a href="page3en.html">The Beginning of a Magical Adventure</a></li>
+            <li><a href="page4en.html">The Epic Conclusion of a Magical Saga</a></li>
+            <li><a href="page5en.html">The Enchanting Melody of the Harry Potter Saga</a></li>
+            <li><a href="page6en.html">The Wizards Behind the Screen</a></li>
+        </ul>
+        <ul class="utils">
+          <li><a href="aboutus.html">A Propos</a></li>
+          <li><a href="Glossary.html">Glossaire</a></li>
+          <li><a href="otherpro.html">Autres projets</a></li>
+        </ul>
+  
+        <p class="suivre">NOUS SUIVRE</p>
+        <div class="social-icons">
+          <img class="img" src="public/img/facebook.webp" />
+          <img class="img" src="public/img/instagram.webp" />
+          <img class="img" src="public/img/twitter.webp" />
+          <img class="img" src="public/img/youtube.webp" />
+        </div>
+      </footer>
+  </body>
+  </html>
