--- a/fr/page1.html
+++ b/fr/page1.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="/src/css/stlye.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <title>article 3</title>
+    <title>home</title>
   </head>
 <body>
     <header>
-      <a href=""><img src="/public/img/logo.webp.jpeg"></a>
+      <a href="page1.html"><img src="/public/img/logo.webp.jpeg"></a>
       <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire">GLOSSAIRE</a></p>
 
       <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
@@ -35,8 +35,8 @@
     <main>
       <section class="landing">
         <img class="head" src="/public/img/Head.webp" alt="accueuil">
-        <div>
-          <p>FR / ENG</p>
+        <div class="headtxt">
+          <p><a href="/fr/page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
           <h1>Dobby est libre</h1>
         </div>
         <p class="intro">
