--- a/fr/Page6.html
+++ b/fr/Page6.html
@@ -10,35 +10,35 @@
     <link rel="stylesheet" href="/src/css/style6.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <title>article 3</title>
+    <title>article 5</title>
   </head>
 <body>
     <header>
-      <a href=""><img src="/public/img/logo.webp.jpeg"></a>
-      <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire">GLOSSAIRE</a></p>
-
-      <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
-        <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
-        </a>
-        <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
-          <div class="close-icon" @click="menuIsOpen = false">
-            <img src="/public/img/menu-closed.webp" alt="Fermer le menu" /></div>
-            <ul>
-              <li><a href="Page2.html">La Saga Magique Qui a Enchanté le Monde</a></li>
-              <li><a href="Page3.html">Le Début Magique d'une Saga Épique</a></li>
-              <li><a href="Page4.html">La Conclusion Épique d'une Saga Magique</a></li>
-              <li><a href="Page5.html">La Mélodie Enchantée de la Saga Harry Potter</a></li>
-              <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
-            </ul>
-        </nav>
-      </header>
-    <main>
+        <a href="page1.html"><img src="/public/img/logo.webp.jpeg"></a>
+        <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire">GLOSSAIRE</a></p>
+  
+        <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
+          <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
+          </a>
+          <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
+            <div class="close-icon" @click="menuIsOpen = false">
+              <img src="/public/img/menu-closed.webp" alt="Fermer le menu" /></div>
+              <ul>
+                <li><a href="Page2.html">La Saga Magique Qui a Enchanté le Monde</a></li>
+                <li><a href="Page3.html">Le Début Magique d'une Saga Épique</a></li>
+                <li><a href="Page4.html">La Conclusion Épique d'une Saga Magique</a></li>
+                <li><a href="Page5.html">La Mélodie Enchantée de la Saga Harry Potter</a></li>
+                <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
+              </ul>
+          </nav>
+        </header>
+      <main>
         <section class="landing">
-            <img class="head" src="/public/img/Head.webp" alt="accueuil">
-            <div>
-              <p>FR / ENG</p>
-              <h1>Dobby est libre</h1>
-            </div>
+          <img class="head" src="/public/img/Head.webp" alt="accueuil">
+          <div>
+            <p><a href="page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
+            <h1>Dobby est libre</h1>
+          </div>
         </section>
         <section class="article">
             <h1>Les Mage Derrière la Réalisation de Harry Potter</h1>
