--- a/fr/page1.html
+++ b/fr/page1.html
@@ -56,8 +56,8 @@
           <p class="rectangle1"></p>
           <p>Explorez l'univers envoûtant de Harry Potter, une saga littéraire qui a charmé un large public depuis sa parution en 1997. Poudlard, l'école de sorcellerie au cœur de l'histoire, est devenue un lieu emblématique, inspirant des générations de fans. Au-delà des livres et des films, cet univers magique se déploie dans des parcs à thème, jeux vidéo, produits dérivés, et une communauté de fans passionnés.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus1"><a href="Page2.html">VOIRE PLUS</a></button>
         </div>
         <div class="article2">
           <h2>Le Début Magique d'une Saga Épique</h2>
@@ -65,8 +65,8 @@
           <p class="rectangle2"></p>
           <p>Découvrez la magie envoûtante de "Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique". Cet article vous plonge dans l'aventure extraordinaire de Harry Potter, captivant des millions de lecteurs. Suivez Harry depuis sa rencontre avec les Dursley jusqu'à l'arrivée de la lettre magique qui change tout, l'invitant à Poudlard, l'école de sorcellerie. Explorez avec Harry, Ron et Hermione les merveilles de Poudlard et plongez dans la lutte contre Lord Voldemort. Cette aventure magique commence ici, où l'émerveillement vous attend.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage2"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus2"><a href="Page3.html">VOIRE PLUS</a></button>
         </div>
         <div class="article3">
           <h2>La Conclusion Épique d'une Saga Magique</h2>
@@ -76,8 +76,8 @@
             "Harry Potter et les Reliques de la Mort : La Conclusion Épique" plonge dans le dernier chapitre de l'aventure légendaire de Harry, Ron et Hermione. Cette conclusion répond aux questions en suspens, explore les moments les plus sombres et célèbre le triomphe du courage sur le mal. Cette aventure cinématographique émotionnelle précède une conclusion touchante pour tous les fans.
             Retournez dans l'univers magique de Harry Potter, revivez les moments marquants de la fin de cette série légendaire et découvrez comment la magie perdure, portée par l'amitié. Cette invitation à revisiter une saga captivante pour les lecteurs et les cinéphiles traverse les générations.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage3"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus3"><a href="Page4.html">VOIRE PLUS</a></button>
         </div>
         <div class="article4">
           <h2>La Mélodie Enchantée de la Saga Harry Potter</h2>
@@ -86,8 +86,8 @@
           <p>
             L'article explore la signification profonde de "Hedwig's Theme", la mélodie emblématique de la saga Harry Potter composée par John Williams. Cette musique va au-delà d'une simple bande originale de film, évoquant enchantement, mystère et aventure grâce à un orchestre symphonique. Présente du premier au dernier film, elle crée une continuité émotionnelle pour les fans. Cette mélodie incarne diverses émotions et rappelle que la magie de Harry Potter réside dans des valeurs telles que l'amitié, le courage et le pouvoir de l'amour. Chaque note de "Hedwig's Theme" rappelle que la magie est partout pour ceux qui savent où la chercher.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage4"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus4"><a href="Page5.html">VOIRE PLUS</a></button>
         </div>
         <div class="article5">
           <h2>Les Mage Derrière la Réalisation de Harry Potter</h2>
@@ -96,8 +96,8 @@
           <p>
             Découvrez les Réalisateurs de Harry Potter : ceux qui ont porté avec talent la magie de Poudlard à l'écran. Chaque film de la série, célèbre pour capturer l'essence des personnages de J.K. Rowling, a été façonné par un réalisateur apportant sa vision artistique unique. Cet article explore leur contribution à cette épopée cinématographique qui maintient l'héritage magique de Harry Potter. Plongez dans cette aventure cinématographique pour explorer le talent derrière cette saga inoubliable, où la magie demeure et la quête de Harry, Ron et Hermione demeure éternelle.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage5"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus5"><a href="Page6.html">VOIRE PLUS</a></button>
         </div>
       </section>
     </main>
@@ -119,10 +119,10 @@
 
       <p class="suivre">NOUS SUIVRE</p>
       <div class="social-icons">
-        <img class="img" src="public/img/facebook.webp" />
-        <img class="img" src="public/img/instagram.webp" />
-        <img class="img" src="public/img/twitter.webp" />
-        <img class="img" src="public/img/youtube.webp" />
+        <img class="img1" src="/public/img/facebook.webp" />
+        <img class="img2" src="/public/img/instagram.webp" />
+        <img class="img3" src="/public/img/twitter.webp" />
+        <img class="img4" src="/public/img/youtube.webp" />
       </div>
     </footer>
 </body>
