--- a/fr/Glossaire.html
+++ b/fr/Glossaire.html
@@ -39,7 +39,8 @@
         <p><a href="page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
         <h1>Dobby est libre</h1>
       </div>
-        <div class="glossaire">
+    </section>
+        <div class="glo">
         <h2>Glossaire</h2>
         <p>
             Poudlard : L'école de sorcellerie emblématique où Harry Potter et ses amis étudient la magie.
