--- a/fr/autreprojet.html
+++ b/fr/autreprojet.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/css/autrepro.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <title>article 3</title>
+    <title>autre projet</title>
   </head>
 <body>
   <header>
@@ -35,39 +35,41 @@
   <main>
     <section class="landing">
       <img class="head" src="/public/img/Head.webp" alt="accueuil">
-      <div>
+      <div class="headtxt">
         <p><a href="page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
         <h1>Dobby est libre</h1>
       </div>
-        <div>
+    </section>
+        <div class="pro1">
         <h2>Edouard Hashimoto</h2>
         <img src="/public/img/logoedouard.webp" alt="logo_edouard">
         <p>
             Bienvenue sur notre site de réplique dédié à l'univers magique de Harry Potter ! Plongeons dans un monde de sorcellerie, d'aventure et de magie, en revisitant les moments les plus emblématiques de cette saga bien-aimée créée par J.K. Rowling.
         </p>
         </div>
-        <div>
+        <div class="pro2">
             <h2>Ethan Schmitt</h2>
             <img src="/public/img/logoethan.webp" alt="logo_ethan">
+            <p>Les idéaux sont pacifiques. L’Histoire est violente.” Cette réplique est prononcée par le personnage du Sergent Wardaddy, interprété par Brad Pitt, dans le film ‘Fury’. Vous vous demandez ce que signifie cette réplique ? Pourquoi est-elle si poignante ? Découvrez la réponse dans notre premier article</p>
         </div>
-        <div>
+        <div class="pro3">
             <h2>Romain Grosjean</h2>
             <img src="/public/img/logoromain.webp" alt="logo_romain">
             <p>Bienvenue sur "Life finds a way", un site web inspiré d'une phrase emblématique du film Jurassic Park. Entrez dans un univers de niche centré sur la franchise, les dinosaures et le paléoart !
             </p>
         </div>
-        <div>
+        <div class="pro4">
             <h2>Melissa Poilane</h2>
             <img src="/public/img/logomelissa.webp" alt="logo_melissa">
             <p>Bienvenue dans l’univers intemporel de Retour vers le futur ! Ici la science-fiction et l’aventure font équipe pour vous faire voyager dans le temps.
             </p>
         </div>
-        <div>
+        <div class="pro5">
             <h2>Claude MALANDA</h2>
             <img src="/public/img/logoclaude.webp" alt="logo_claude">
             <p>Les idéaux sont pacifiques. L’Histoire est violente.” Cette réplique est prononcée par le personnage du Sergent Wardaddy, interprété par Brad Pitt, dans le film ‘Fury’. Vous vous demandez ce que signifie cette réplique ? Pourquoi est-elle si poignante ? Découvrez la réponse dans notre premier article.</p>
         </div>
-        <div>
+        <div class="pro6">
             <h2>Maxence Lallemand</h2>
             <img src="/public/img/logomaxence.webp" alt="logo_maxence">
             <p>The End of Evangelion a réussi à non seulement révolutionner un genre en déclin, mais à révolutionner l’animation japonaise. À travers des thèmes psychologiques et sociaux avec comme seule fatalité la fin du monde, ce film touche des points sensibles sur la nature humaine, tout en donnant une vraie fin à une série mythique.</p>
@@ -88,7 +90,7 @@
         <ul class="utils">
           <li><a href="apropos.html">A Propos</a></li>
           <li><a href="glossaire.html">Glossaire</a></li>
-          <li><a href="autreprojet">Autres projets</a></li>
+          <li><a href="autreprojet.html">Autres projets</a></li>
         </ul>
   
         <p class="suivre">NOUS SUIVRE</p>
