--- a/en/page1en.html
+++ b/en/page1en.html
@@ -48,52 +48,52 @@
         <img class="illustration" src="/public/img/illu_harry.webp" alt="illustration">
       </section>
       <section class="articles">
+        <h1>Introduction to the articles</h1>
         <div class="article1">
-          <h1>Introduction to the articles</h1>
           <h2>The Magical Saga That Enchanted the World</h2>
-          <a href=""><img src="/public/img/HarryP1 banner.webp"></a>
+          <a href="page1en.html"><img src="/public/img/HarryP1 banner.webp"></a>
           <p>
             Explore the enchanting universe of Harry Potter, a literary saga that has charmed a broad audience since its release in 1997. Hogwarts, the wizarding school at the heart of the story, has become an iconic place, inspiring generations of fans. Beyond books and films, this magical universe extends into theme parks, video games, merchandise, and a community of passionate fans.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus1"><a href="page2en.html">SHOW MORE</a></button>
         </div>
         <div class="article2">
           <h2>The Magical Beginning of an Epic Saga</h2>
-          <a href=""><img src="/public/img/HarryP1.webp"></a>
+          <a href="page3en.html"><img src="/public/img/HarryP1.webp"></a>
           <p>
             Discover the enchanting magic of 'Harry Potter and the Sorcerer's Stone: The Magical Beginning of an Epic Saga.' This article immerses you in the extraordinary adventure of Harry Potter, captivating millions of readers. Follow Harry from his encounter with the Dursleys to the arrival of the life-changing magical letter, inviting him to Hogwarts School of Witchcraft and Wizardry. Explore the wonders of Hogwarts with Harry, Ron, and Hermione, and delve into the battle against Lord Voldemort. This magical adventure begins here, where wonder awaits you.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage2"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus2"><a href="page3en.html">SHOW MORE</a></button>
         </div>
         <div class="article3">
           <h2>The Epic Conclusion of a Magical Saga</h2>
-          <a href=""><img src="/public/img/Harry_gare.webp"></a>
+          <a href="page4en.html"><img src="/public/img/Harry_gare.webp"></a>
           <p>
             Harry Potter and the Deathly Hallows: The Epic Conclusion" delves into the final chapter of the legendary adventure of Harry, Ron, and Hermione. This conclusion addresses lingering questions, explores the darkest moments, and celebrates the triumph of courage over evil. This emotionally charged cinematic adventure leads to a touching conclusion for all fans.
             Step back into the magical world of Harry Potter, relive the pivotal moments of the end of this legendary series, and discover how magic endures, carried by friendship. This invitation to revisit a captivating saga for readers and film enthusiasts spans generations.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage3"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus3"><a href="page4en.html">SHOW MORE</a></button>
         </div>
         <div class="article4">
           <h2>The Enchanting Melody of the Harry Potter Saga</h2>
-          <a href=""><img src="/public/img/Hedwige.webp"></a>
+          <a href="page5en.html"><img src="/public/img/Hedwige.webp"></a>
           <p>
             The article explores the profound meaning of "Hedwig's Theme," the iconic melody of the Harry Potter saga composed by John Williams. This music transcends a mere film soundtrack, evoking enchantment, mystery, and adventure through a symphonic orchestra. Present from the first to the last film, it creates an emotional continuity for fans. This melody embodies various emotions and reminds us that the magic of Harry Potter resides in values such as friendship, courage, and the power of love. Every note of "Hedwig's Theme" serves as a reminder that magic is everywhere for those who know where to look.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage4"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus4"><a href="page5en.html">SHOW MORE</a></button>
         </div>
         <div class="article5">
           <h2>The Wizards Behind the Screen</h2>
-          <a href=""><img src="/public/img/Chaise.webp"></a>
+          <a href="page6en.html"><img src="/public/img/Chaise.webp"></a>
           <p>
             Discover the Directors of Harry Potter: those who skillfully brought the magic of Hogwarts to the screen. Each film in the series, renowned for capturing the essence of J.K. Rowling's characters, has been shaped by a director bringing their unique artistic vision. This article explores their contribution to this cinematic epic that upholds Harry Potter's magical legacy. Dive into this cinematic journey to explore the talent behind this unforgettable saga, where magic persists and the quest of Harry, Ron, and Hermione remains eternal.
           </p>
-          <a href=""><img src="/public/img/partager" alt="partager"></a>
-          <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+          <button class="partage5"><img src="/public/img/partager.png" alt="partager"></button>
+          <button class="vplus5"><a href="page6en.html">SHOW MORE</a></button>
         </div>
       </section>
     </main>
@@ -108,17 +108,17 @@
           <li><a href="page6en.html">The Wizards Behind the Screen</a></li>
       </ul>
       <ul class="utils">
-        <li><a href="aboutus.html">A Propos</a></li>
-        <li><a href="Glossary.html">Glossaire</a></li>
-        <li><a href="otherpro.html">Autres projets</a></li>
+        <li><a href="aboutus.html">About us</a></li>
+        <li><a href="Glossary.html">Glossary</a></li>
+        <li><a href="otherpro.html">Others Projects</a></li>
       </ul>
 
-      <p class="suivre">NOUS SUIVRE</p>
+      <p class="suivre">FOLLOW US</p>
       <div class="social-icons">
-        <img class="img" src="public/img/facebook.webp" />
-        <img class="img" src="public/img/instagram.webp" />
-        <img class="img" src="public/img/twitter.webp" />
-        <img class="img" src="public/img/youtube.webp" />
+        <img class="img1" src="/public/img/facebook.webp" />
+        <img class="img2" src="/public/img/instagram.webp" />
+        <img class="img3" src="/public/img/twitter.webp" />
+        <img class="img4" src="/public/img/youtube.webp" />
       </div>
     </footer>
 </body>
