--- a/fr/page1.html
+++ b/fr/page1.html
@@ -15,7 +15,7 @@
 <body>
     <header>
       <a href="page1.html"><img src="/public/img/logo.webp.jpeg"></a>
-      <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire">GLOSSAIRE</a></p>
+      <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire.html">GLOSSAIRE</a></p>
 
       <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
         <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
@@ -114,7 +114,7 @@
       <ul class="utils">
         <li><a href="apropos.html">A Propos</a></li>
         <li><a href="glossaire.html">Glossaire</a></li>
-        <li><a href="autreprojet">Autres projets</a></li>
+        <li><a href="autreprojet.html">Autres projets</a></li>
       </ul>
 
       <p class="suivre">NOUS SUIVRE</p>
