header footer modif

--- a/en/Glossary.html
+++ b/en/Glossary.html
@@ -63,17 +63,17 @@
             <li><a href="page6en.html">The Wizards Behind the Screen</a></li>
         </ul>
         <ul class="utils">
-          <li><a href="aboutus.html">A Propos</a></li>
-          <li><a href="Glossary.html">Glossaire</a></li>
-          <li><a href="otherpro.html">Autres projets</a></li>
+          <li><a href="aboutus.html">About us</a></li>
+          <li><a href="Glossary.html">Glossary</a></li>
+          <li><a href="otherpro.html">Others Projects</a></li>
         </ul>
   
-        <p class="suivre">NOUS SUIVRE</p>
+        <p class="suivre">FOLLOW US</p>
         <div class="social-icons">
-          <img class="img" src="public/img/facebook.webp" />
-          <img class="img" src="public/img/instagram.webp" />
-          <img class="img" src="public/img/twitter.webp" />
-          <img class="img" src="public/img/youtube.webp" />
+          <img class="img1" src="/public/img/facebook.webp" />
+          <img class="img2" src="/public/img/instagram.webp" />
+          <img class="img3" src="/public/img/twitter.webp" />
+          <img class="img4" src="/public/img/youtube.webp" />
         </div>
       </footer>
   </body>
