--- a/fr/Page3.html
+++ b/fr/Page3.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="page1.html"><img src="/public/img/logo.webp.jpeg"></a>
-        <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire">GLOSSAIRE</a></p>
+        <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire.html">GLOSSAIRE</a></p>
   
         <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
           <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
@@ -35,8 +35,8 @@
       <main>
         <section class="landing">
           <img class="head" src="/public/img/Head.webp" alt="accueuil">
-          <div>
-            <p><a href="page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
+          <div class="headtxt">
+            <p><a href="/fr/page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
             <h1>Dobby est libre</h1>
           </div>
         </section>
@@ -159,15 +159,15 @@
         <ul class="utils">
           <li><a href="apropos.html">A Propos</a></li>
           <li><a href="glossaire.html">Glossaire</a></li>
-          <li><a href="autreprojet">Autres projets</a></li>
+          <li><a href="autreprojet.html">Autres projets</a></li>
         </ul>
   
         <p class="suivre">NOUS SUIVRE</p>
         <div class="social-icons">
-          <img class="img" src="public/img/facebook.webp" />
-          <img class="img" src="public/img/instagram.webp" />
-          <img class="img" src="public/img/twitter.webp" />
-          <img class="img" src="public/img/youtube.webp" />
+          <img class="img1" src="/public/img/facebook.webp" />
+          <img class="img2" src="/public/img/instagram.webp" />
+          <img class="img3" src="/public/img/twitter.webp" />
+          <img class="img4" src="/public/img/youtube.webp" />
         </div>
       </footer>
   </body>
